# logger

./: .gitignore  README.md  pyproject.toml
src/logger/: __about__.py  __init__.py  logger.py
tests/: __init__.py  conftest.py  test_main.py
tests/mypackage/: __init__.py  __main__.py  mymodule.py
tests/otherpackage/: othermodule.py
